--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,18 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.7.3
   flutter_launcher_icons: ^0.13.1
+  google_ml_kit: ^0.9.0
+  camera: ^0.10.5+3
+  path: ^1.8.2
+  path_provider: ^2.1.0
+  image_picker: ^1.0.2
   # firebase_core_platform_interface: 4.5.1
 
+  google_mlkit_commons:
+    #path: ../google_mlkit_commons 
+  google_mlkit_face_detection:
+    #path: ../google_mlkit_face_detection
+  
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +61,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
