--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.1.0
   image_picker: ^1.0.2
+
+  firebase_storage: ^11.2.6
   # firebase_core_platform_interface: 4.5.1
 
   google_mlkit_commons:
