--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.7.3
   flutter_launcher_icons: ^0.13.1
+  google_nav_bar: ^5.0.6
   # firebase_core_platform_interface: 4.5.1
 
 
