--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,6 @@ flutter {
 dependencies {
     //implementation("org.tensorflow:tensorflow-lite:+")
     implementation platform('com.google.firebase:firebase-bom:32.2.2')
+   // implementation 'com.google.mlkit:face-detection:17.0.2'
+
 }
