--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/face_recog_vgg_new.tflite
+    - assets/labels.txt
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
