--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,7 +46,7 @@ android {
         applicationId "com.example.s_a_a_m"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -66,7 +66,7 @@ flutter {
 }
 
 dependencies {
-    //implementation("org.tensorflow:tensorflow-lite:+")
+    //compile ("org.tensorflow:tensorflow-lite:+")
     implementation platform('com.google.firebase:firebase-bom:32.2.2')
    // implementation 'com.google.mlkit:face-detection:17.0.2'
 
