--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,10 +6,11 @@ buildscript {
     }
 
     dependencies {
-        //implementation ("org.tensorflow:tensorflow-lite:+")
+        //compile ("org.tensorflow:tensorflow-lite:+")
         classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        //classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         
     }
 }
